# cpft-source

./: .typos.toml  Agilent.ipc  Cargo.toml  README.adoc  index.html
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
doc/: 3х -Постоянный поток_Основной.xlsx  DeadTime.adoc  PAPER.adoc  PAPER.html  SCHEMA.adoc  SCHEMA.html  Постоянный поток_1 (испр).xlsx  Постоянный поток_1.xlsx  мертвые времена.xlsx
ftl/en/: main.ftl  params.ftl
ftl/und/: icons.ftl
src/: lib.rs  localization.rs  main.rs
src/app/: data.rs  mod.rs  text.rs
src/app/computers/: mod.rs  source.rs
src/app/computers/distance/: filter.rs  filtered.rs  mod copy.rs  mod.rs  plot.rs  unique.rs
src/app/computers/source/: mod.rs  plot.rs
src/app/panes/: behavior.rs  mod.rs
src/app/panes/distance/: mod.rs  plot.rs  settings.rs  table.rs
src/app/panes/source/: mod.rs  plot copy 2.rs  plot copy.rs  plot.rs  settings.rs  state.rs  table.rs
src/app/panes/widgets/: float.rs  mod.rs  view.rs
src/presets/agilent/: DeadTime.ipc  mod.rs
src/utils/: cross.rs  markdown_math.rs  mod.rs  save.rs  try_f.rs  vec.rs
