[package]
name = "cpft"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.31.0"
# egui-phosphor = "0.8.0"
egui-phosphor = { git = "https://github.com/bircni/egui-phosphor", branch = "patch/egui-version" }
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.31.0"
egui_plot = "0.31.0"
egui_table = "0.3.0"
egui_tiles = "0.12.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
itertools = "0.14.0"
lipid = { git = "https://github.com/ippras/lipid" }
log = "0.4.25"
metadata = { git = "https://github.com/ippras/metadata" }
polars = { version = "0.46.0", features = [
    "abs",
    "cross_join",
    "diagonal_concat",
    "dtype-i16",
    "dtype-i8",
    "dtype-struct",
    "dtype-u16",
    "dtype-u8",
    "fmt_no_tty",
    "iejoin",
    "is_between",
    "lazy",
    "list_eval",
    "polars-io",
    "round_series",
    "serde",
    "sign",
    "trigonometry",
    #
    # "parquet",
    # "interpolate",
    # "interpolate_by",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
uom = { version = "0.36.0", features = ["serde"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
gloo-utils = "0.2.0"
js-sys = "0.3.77"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["FilePropertyBag"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
