[package]
name = "cpft"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.31.0"
egui-phosphor = "0.9.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = { version = "0.31.0", features = ["svg"] }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", features = ["macros"] }
egui_plot = "0.31.0"
egui_table = "0.3.0"
egui_tiles = "0.12.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
itertools = "0.14.0"
lipid = { git = "https://github.com/ippras/lipid", features = ["polars"] }
log = "0.4.25"
metadata = { git = "https://github.com/ippras/metadata" }
nalgebra = "0.33.2"
polars = { version = "0.46.0", features = [
    "abs",
    "cross_join",
    "diagonal_concat",
    "dtype-array",
    "dtype-i16",
    "dtype-i8",
    "dtype-struct",
    "dtype-u16",
    "dtype-u8",
    "fmt_no_tty",
    "iejoin",
    "is_between",
    "lazy",
    "list_eval",
    "polars-io",
    "round_series",
    "serde",
    "sign",
    "trigonometry",
    #
    # "parquet",
    # "interpolate",
    # "interpolate_by",
], default-features = false }
polars-utils = { git = "https://github.com/pola-rs/polars", rev = "65848bc2ff4bda33809ed8be2517594df5b53d26", features = [
    "nightly",
] }
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
uom = { version = "0.36.0", features = ["serde"] }

# egui_commonmark = "0.20.0"
# mathjax_svg = "3.1.2"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
